tests/machine/x/go/dataset_sort_take_limit.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/dataset_sort_take_limit.go:13:16: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:14:3: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:18:3: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:22:3: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:26:3: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:30:3: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:34:3: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:38:3: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:43:24: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:47:10: undefined: ProductsItem
../../../tests/machine/x/go/dataset_sort_take_limit.go:47:10: too many errors

1: //go:build ignore
